--- a/css/work_list.css
+++ b/css/work_list.css
@@ -389,6 +389,8 @@ header {
     width: 1141px;
     border: 1px solid red;
     margin: 0 auto;
+    display: flex;
+    /*overflow: hidden;*/
     /*position: absolute;*/
 }
 .bor{
