--- a/css/contactus.css
+++ b/css/contactus.css
@@ -478,15 +478,11 @@ header {
     }
     #hamburger{
         display: block;
-        margin-right: 30px;
         scale: 1.3;
     }
     header{
         height: 100px;
-    }
-    #topGnb img{
-        margin-left: 30px;
-    }
+    }s
     #section1 #section1_allTxtBox span{
         width: 180px;
     }
@@ -521,16 +517,14 @@ header {
     }
     #hamburger {
         display: block;
-        margin-right: 30px;
         scale: 1.3;
     }
     #section2{
-        height: 300px;
+        height: 400px;
     }
     #section2 #section2_mapBox #map{
         width: 90%;
         height: 300px;
-        margin-top: -25px;
     }
     #footer div p{
         font-size: 14px;
