--- a/css/work_list.css
+++ b/css/work_list.css
@@ -386,10 +386,10 @@ header {
 /**********************section1**********************/
 #section1{
     height: auto;
-    width: 1141px;
-    border: 1px solid red;
+    width: 1143px;
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
     /*overflow: hidden;*/
     /*position: absolute;*/
 }
@@ -430,16 +430,6 @@ header {
 }
 #section1 .section1_txtBox p{
     font-size: 13px;
-}
-#section1 #section1_secondLine{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-#section1 #section1_thirdLine{
-    width: 100%;
-    display: flex;
-    justify-content: left;
 }
 /**********************section1_imgHover**********************/
 .box{
@@ -514,6 +504,21 @@ header {
     background-color: #EFEFEF;
     margin: 0 auto;
 }
+#PlusBtn_box2{
+    width: 100%;
+    height: auto;
+    margin: 80px 0 80px 0;
+}
+#PlusBtn2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: #EFEFEF;
+    margin: 0 auto;
+}
 /**********************footer**********************/
 #footer{
     position: relative;
@@ -531,9 +536,6 @@ header {
 }
 #footer div img{
     margin-bottom: 30px;
-}
-.bor{
-    border: 1px solid red;
 }
 /***************************************************************************/
 /*********************************미디어 쿼리*********************************/
