--- a/css/request.css
+++ b/css/request.css
@@ -24,7 +24,7 @@ html, body {
     height: 100%;
 }
 header {
-    width: 80%;
+    width: 90%;
     height: 250px;
     box-sizing: border-box;
     overflow: hidden;
@@ -118,15 +118,7 @@ header {
     cursor: pointer;
 }
 .gnbActive{
-    content: "";
-    width: 50%;
-    background-color: purple;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 3px;
-    margin: 0 auto;
+    border-bottom: 3px solid purple;
 }
 /**********************상단 네비 서브메뉴**********************/
 #subMenu {
@@ -269,6 +261,7 @@ header {
 .mobileGnb #mobileTop .close{
     cursor: pointer;
     scale: 1.3;
+    margin-right: 50px;
 }
 .mobileGnb .mobileMenu li{
     margin: 20px 0 0 30px;
@@ -297,7 +290,7 @@ header {
 .lessBtn2{
     display: flex;
     position: absolute;
-    left:92%;
+    left:88%;
     cursor: pointer;
     z-index: 9;
 }
@@ -349,7 +342,7 @@ header {
 }
 /**********************section1**********************/
 #section1{
-    width: 1200px;
+    width: 100%;
     height: 300px;
     position: relative;
     margin: 0 auto;
@@ -361,14 +354,17 @@ header {
     display: flex;
 }
 #section1 #section1_AllBox #section1_txtBox{
-    width: 900px;
+    width: 90%;
     height: 100%;
     position: relative;
 }
 #section1 #section1_AllBox #section1_txtBox h4{
-    margin: 100px 0 0 20px;
     font-size: 28px;
     font-weight: 100;
+    margin-left: 45px;
+}
+#section1 #section1_AllBox #section1_txtBox h4:nth-of-type(1){
+    margin: 100px 0 0 45px;
 }
 #section1 #section1_AllBox #section1_BtnBox{
     width: 250px;
@@ -394,6 +390,25 @@ header {
     width: 138px;
     display: inline-block;
     border-bottom: white;
+}
+#section1 #section1_AllBox #section1_hide_BtnBox{
+    width: 90%;
+    height: 110px;
+    background-color: #60227E;
+    position: relative;
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 20px;
+    font-size: 18px;
+    font-weight: bolder;
+}
+#section1 #section1_AllBox #section1_hide_BtnBox a{
+    color: white;
+    font-size: 14px;
+    font-weight: lighter;
 }
 /**********************section2**********************/
 #section2{
@@ -488,4 +503,254 @@ header {
     color: white;
     transition: background-color 0.5s,color 0.5s;
 }
-
+#section2 #section2_inputBox{
+    width: 70%;
+    height: 100%;
+    position: absolute;
+    margin-left: 360px;
+}
+#section2 #section2_inputBox #section2_inputBox_txt{
+    position: relative;
+    width: 90%;
+    height: 90px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 2px solid black;
+}
+#section2 #section2_inputBox #section2_inputBox_txt h1{
+    font-size: 26px;
+    margin-top: 15px;
+}
+#section2 #section2_inputBox #section2_inputBox_txt p{
+    font-size: 14px;
+    margin-top: 15px;
+}
+.star{
+    color: #E90A39;
+}
+#section2 #section2_inputBox #section2_form{
+    width: 90%;
+    height: 639px;
+    margin: 0 auto;
+    position: relative;
+    border-bottom: 1px solid black;
+    /*margin: 30px 0 0 70px;*/
+}
+#section2 #section2_inputBox #section2_form #section2_form_txt{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+#section2 #section2_inputBox #section2_form #section2_form_txt div{
+    margin: 22px 0 0 30px;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+#section2 #section2_inputBox #section2_form #section2_form_txt textarea{
+    width: 500px;
+    height: 180px;
+    border: 1px solid lightgrey;
+    resize: none;
+}
+#section2 #section2_inputBox #section2_form #section2_form_txt input{
+    width: 500px;
+    height: 30px;
+    border: 1px solid lightgrey;
+}
+#section2 #section2_inputBox #section2_form #section2_form_txt .radio{
+    width: 20px;
+    height: 20px;
+    color: black;
+}
+#section2 #section2_inputBox #section2_form #section2_form_txt .radio_txt{
+    position: relative;
+    top: -5px;
+    font-size: 13px;
+}
+#section2 #section2_inputBox #section2_form #section2_form_txt #Input_fileBox input{
+    position: absolute;
+    bottom: 0;
+}
+#section2 #section2_inputBox #section2_form #section2_form_txt #Input_fileBox #fileInput{
+    position: absolute;
+    bottom: 5px;
+    float: right;
+}
+#section2 #section2_inputBox #section2_form #section2_form_txt #money{
+    font-size: 14px;
+}
+#section2 #section2_inputBox #section2_form #section2_form_txt p{
+    display: inline-block;
+    margin-right: 70px;
+    width: 100px;
+    font-size: 16px;
+}
+/**********************section3**********************/
+#section3{
+    width: 1200px;
+    height: 400px;
+    margin: 70px auto;
+    position: relative;
+}
+#section3 #section3_allBox{
+    width: 100%;
+    height: 200px;
+    border: 1px solid #ddd;
+    position: relative;
+    margin-top: 20px;
+}
+#section3 #section3_allBox #section3_txtBox{
+    width: 65%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    color: #888888;
+}
+#section3 #section3_allBox #section3_txtBox p{
+    font-size: 14px;
+}
+#section3 #section3_allBox #section3_txtBox div{
+    margin: 25px 0 0 30px;
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+#section3 #section3_allBox #section3_labelBox{
+    width: 100%;
+    height: 30px;
+    margin-top: 20px;
+    padding: 4px;
+}
+#section3 #section3_allBox #section3_labelBox #section3_checkBox{
+    width: 20px;
+    height: 20px;
+}
+#section3 #section3_allBox #section3_labelBox span{
+    position: relative;
+    top: -4px;
+}
+#section3 #section3_submitBox{
+    width: 120px;
+    height: 50px;
+    position: relative;
+    bottom: 0;
+    display: inline-block;
+    text-align: center;
+    line-height: 50px;
+    left: 50%;
+    margin-left: -100px;
+    top: 70px;
+    background: #60227e;
+}
+#section3 #section3_submitBox a{
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    display: block;
+    font-size: 13px;
+    color: white;
+}
+#section3 h1{
+    font-size: 26px;
+}
+/**********************footer**********************/
+#footer{
+    position: relative;
+    width: 100%;
+    height: 180px;
+    background-color: black;
+    color: #999999;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+}
+#footer div{
+    position: relative;
+}
+#footer div img{
+    margin-bottom: 30px;
+}
+/***************************************************************************/
+/*********************************미디어 쿼리*********************************/
+/***************************************************************************/
+/***************모니터 크기***************/
+@media screen and (min-width: 1200px){
+    #menu,
+    .close,
+    #section1_mobile,
+    #hamburger{
+        display: none;
+    }
+    #language{
+        display: block;
+    }
+    #section1 #section1_AllBox #section1_hide_BtnBox{
+        display: none;
+    }
+}
+/**************타블렛 사이즈***************/
+@media screen and (min-width: 841px) and (max-width: 1199px){
+    #topGnb ul li,
+    #title,
+    #language{
+        display: none;
+    }
+    #hamburger{
+        display: block;
+        margin-right: 30px;
+        scale: 1.3;
+    }
+    #topGnb img{margin-left: 30px;}
+    #section1{
+        margin: -150px 0 40px 0;
+        display: flex;
+    }
+    #section1 #section1_AllBox{
+        flex-direction: column;
+    }
+    #section1 #section1_AllBox #section1_BtnBox{
+        display: none
+    }
+    #section1 #section1_AllBox #section1_hide_BtnBox{
+        display: block;
+    }
+    #section1 #section1_AllBox #section1_txtBox h4{
+        display: inline-block;
+    }
+}
+/**************모바일 사이즈***************/
+@media screen and (max-width: 840px) {
+    #topGnb ul li,
+    #title,
+    #language {
+        display: none;
+    }
+    #topGnb {
+        /*background-color: #1A191B;*/
+    }
+    #hamburger {
+        display: block;
+        margin-right: 30px;
+        scale: 1.3;
+    }
+    #topGnb img {
+        margin-left: 30px;
+    }
+    #section1{
+        margin: -250px 0 130px 0;
+        display: flex;
+    }
+    #section1 #section1_AllBox{
+        flex-direction: column;
+    }
+    #section1 #section1_AllBox #section1_BtnBox{
+        display: none
+    }
+    #section1 #section1_AllBox #section1_hide_BtnBox{
+        height: 70px;
+    }
+}
