--- a/css/company.css
+++ b/css/company.css
@@ -4,22 +4,18 @@
     box-sizing: border-box;
 }
 .material-symbols-outlined .arrow2 {
-    /*color: white;*/
-    font-variation-settings: 'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 24
-}
-.material-symbols-outlined .arrow2 {
     color: white;
+    font-variation-settings:
+            'FILL' 0,
+            'wght' 400,
+            'GRAD' 0,
+            'opsz' 24
 }
 .hidden {
     overflow: hidden;
 }
 html, body {
-    width: 100%;
-    height: 100%;
-    /*background-color: #5B6168;*/
+    font-family: 'Noto Sans KR', sans-serif;
 }
 #wrapper {
     width: 100%;
@@ -27,45 +23,70 @@ html, body {
 }
 header {
     width: 100%;
-    height: 250px;
+    height: 100px;
     box-sizing: border-box;
     overflow: hidden;
     display: flex;
     position: relative;
+    margin: 0 auto;
     /*  border: 1px solid red;*/
 }
 #subMenu2 {
     display: none;
 }
+.po{
+    cursor: pointer;
+}
+/*********************************로그인*********************************/
+#loginFormBox{
+    width: 100%;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+}
+#loginFormBox #loginForm{
+    width: 100%;
+    height: 20px;
+    position: fixed;
+    z-index: 9999;
+    display: flex;
+    justify-content: right;
+    background-color: white;
+}
+#loginFormBox #loginForm span{
+    margin-right: 30px;
+    cursor: pointer;
+    font-size: 14px;
+}
 /**********************상단 네비**********************/
 #topGnb {
     width: 100%;
     height: 100px;
-    z-index: 9;
-    position: relative;
+    z-index: 999;
+    /*position: relative;*/
     display: flex;
     justify-content: space-around;
     box-sizing: border-box;
-    /*border: 1px solid red;*/
-}
-#topGnb:hover {
     background-color: white;
-    color: #1A191B;
-    transition: background-color 0.5s;
+    position: fixed;
+}
+#topGnb #nav_list{
+    width: 50%;
 }
 #topGnb #language,
 #topGnb #hamburger {
     color: black;
     cursor: pointer;
 }
-#topGnb ul {
-    width: 80%;
+#topGnb #topGnbMenu {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
     padding: 0;
 }
-#topGnb ul li {
+#topGnb #topGnbMenu li {
     width: 15%;
     float: left;
     list-style: none;
@@ -73,10 +94,8 @@ header {
     height: 100px;
     line-height: 100px;
     position: relative;
-    left: -40px;
-    /*margin-right: -30px;*/
 }
-#topGnb ul li a::after {
+#topGnb #topGnbMenu li a::after {
     content: "";
     width: 0;
     position: absolute;
@@ -87,15 +106,15 @@ header {
     transition: width 0.5s;
     margin: 0 auto;
 }
-#topGnb ul li:hover a::after {
-    width: 50%;
+#topGnb #topGnbMenu li:hover a::after {
+    width: 80%;
     background-color: purple;
 }
-#topGnb ul li:hover a {
+#topGnb #topGnbMenu li:hover a {
     color: purple;
     transition: color 0.5s;
 }
-#topGnb ul li a {
+#topGnb #topGnbMenu li a {
     text-decoration: none;
     color: black;
     font-weight: bolder;
@@ -120,6 +139,8 @@ header {
     margin-top: 100px;
     z-index: 99999 !important;
     background-color: white;
+    border-top: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
     box-sizing: border-box;
     transition: background-color 0.5s;
     display: none;
@@ -132,7 +153,6 @@ header {
     transition: background-color 0.5s;
     justify-content: center;
     align-items: center;
-    border-top: 1px solid lightgrey;
     position: relative;
     z-index: 9;
     box-sizing: border-box;
@@ -180,6 +200,7 @@ header {
     background-color: white;
     font-size: 0.9em;
     border-top: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
     box-sizing: border-box;
 }
 #subMenu2 #subMenu2_lastTxt{
@@ -208,9 +229,10 @@ header {
     margin: 10px 0 10px 0;
 }
 #subMenu2 #subMenu2_firstBox .subMenu2_menu{
-    width: 50%;
-    height: 100%;
+    width: 48%;
+    height: 85px;
     float: left;
+    /*border: 1px solid black;*/
 }
 #subMenu2 ul li{
     position: relative;
@@ -239,7 +261,7 @@ header {
     width: 100%;
     height: 100%;
     background-color: white;
-    margin-left: 30px;
+    z-index: 10;
 }
 .mobileGnb #mobileTop{
     /*z-index: 200;*/
@@ -251,20 +273,20 @@ header {
     cursor: pointer;
     scale: 1.3;
 }
-.mobileMenu li{
-    margin-top: 20px;
-    font-size: 1em;
+.mobileGnb .mobileMenu li{
+    margin: 20px 0 0 30px;
+    font-size: 1.3em;
     font-weight: bolder;
 }
-.mobileMenu li a{
-    color: #60227E;
+.mobileGnb .mobileMenu li a{
+    color: black;
     text-decoration: none;
-    font-size: 1.3em;
+    /*font-size: 1.3em;*/
 }
-.mobileMenu #subM1 li a{
+.mobileGnb .mobileMenu #subM1 li a{
     color: black;
 }
-.mobileMenu #subM2 li a{
+.mobileGnb .mobileMenu #subM2 li a{
     color: #5B6168;
 }
 .mobileMenu #subM1 li a:hover,
@@ -295,7 +317,7 @@ header {
     position: relative;
     left: -20px;
     list-style: none;
-    font-size: 0.8em;
+    font-size: 1em;
 }
 .mobileGnb .mobileMenu #subM2{
     width: 100%;
@@ -315,18 +337,22 @@ header {
 .mobileGnb .mobileMenu #subM2 li:nth-of-type(2),
 .mobileGnb .mobileMenu #subM2 li:nth-of-type(3),
 .mobileGnb .mobileMenu #subM2 li:nth-of-type(4){
-    font-size: 0.7em;
+    font-size: 1em;
 }
-/**********************title**********************/
-#title {
+/**********************titleBox**********************/
+#title_box{
     width: 100%;
-    /*height: 50px;*/
+    height: auto;
+    overflow: hidden;
+}
+#title_box h1 span{
     position: absolute;
-    text-align: center;
-    font-size: 2.1em;
-    /*border: 1px solid red;*/
-    margin:120px auto;
-    /*display: none;*/
+    color: white;
+    left: 50%;
+    margin-left: -100px;
+    top: 230px;
+    font-size: 48px;
+    font-weight: bolder;
 }
 /**********************section1**********************/
 #section1{
@@ -335,7 +361,7 @@ header {
     justify-content: space-around;
     width: 80%;
     height: 200px;
-    margin: 80px auto;
+    margin: 100px auto;
 }
 #section1 .textBox{
     /*display: none;*/
@@ -365,7 +391,7 @@ header {
     width: 500px;
     height: 320px;
     /*border: 1px solid red;*/
-    margin-top: -160px;
+    margin-top: -80px;
 }
 #section1 #section1_mobile div{
     float: left;
