--- a/css/method.css
+++ b/css/method.css
@@ -5,23 +5,25 @@
 }
 .material-symbols-outlined .arrow2 {
     color: white;
+    font-variation-settings:
+            'FILL' 0,
+            'wght' 400,
+            'GRAD' 0,
+            'opsz' 24
 }
 .hidden {
     overflow: hidden;
 }
 html, body {
-    width: 100%;
-    height: 100%;
     font-family: 'Noto Sans KR', sans-serif;
-    letter-spacing:-1.5px;
 }
 #wrapper {
     width: 100%;
     height: 100%;
 }
 header {
-    width: 80%;
-    height: 250px;
+    width: 100%;
+    height: 100px;
     box-sizing: border-box;
     overflow: hidden;
     display: flex;
@@ -32,35 +34,59 @@ header {
 #subMenu2 {
     display: none;
 }
+.po{
+    cursor: pointer;
+}
+/*********************************로그인*********************************/
+#loginFormBox{
+    width: 100%;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+}
+#loginFormBox #loginForm{
+    width: 100%;
+    height: 20px;
+    position: fixed;
+    z-index: 9999;
+    display: flex;
+    justify-content: right;
+    background-color: white;
+}
+#loginFormBox #loginForm span{
+    margin-right: 30px;
+    cursor: pointer;
+    font-size: 14px;
+}
 /**********************상단 네비**********************/
 #topGnb {
     width: 100%;
     height: 100px;
-    z-index: 9;
-    position: relative;
+    z-index: 999;
+    /*position: relative;*/
     display: flex;
     justify-content: space-around;
     box-sizing: border-box;
-    /*border: 1px solid red;*/
-}
-#topGnb:hover {
     background-color: white;
-    color: #1A191B;
-    transition: background-color 0.5s;
+    position: fixed;
+}
+#topGnb #nav_list{
+    width: 50%;
 }
 #topGnb #language,
 #topGnb #hamburger {
     color: black;
     cursor: pointer;
 }
-#topGnb ul {
-    width: 80%;
+#topGnb #topGnbMenu {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
     padding: 0;
 }
-#topGnb ul li {
+#topGnb #topGnbMenu li {
     width: 15%;
     float: left;
     list-style: none;
@@ -68,10 +94,8 @@ header {
     height: 100px;
     line-height: 100px;
     position: relative;
-    left: -40px;
-    /*margin-right: -30px;*/
 }
-#topGnb ul li a::after {
+#topGnb #topGnbMenu li a::after {
     content: "";
     width: 0;
     position: absolute;
@@ -82,15 +106,15 @@ header {
     transition: width 0.5s;
     margin: 0 auto;
 }
-#topGnb ul li:hover a::after {
-    width: 50%;
+#topGnb #topGnbMenu li:hover a::after {
+    width: 80%;
     background-color: purple;
 }
-#topGnb ul li:hover a {
+#topGnb #topGnbMenu li:hover a {
     color: purple;
     transition: color 0.5s;
 }
-#topGnb ul li a {
+#topGnb #topGnbMenu li a {
     text-decoration: none;
     color: black;
     font-weight: bolder;
@@ -115,6 +139,8 @@ header {
     margin-top: 100px;
     z-index: 99999 !important;
     background-color: white;
+    border-top: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
     box-sizing: border-box;
     transition: background-color 0.5s;
     display: none;
@@ -127,7 +153,6 @@ header {
     transition: background-color 0.5s;
     justify-content: center;
     align-items: center;
-    border-top: 1px solid lightgrey;
     position: relative;
     z-index: 9;
     box-sizing: border-box;
@@ -175,6 +200,7 @@ header {
     background-color: white;
     font-size: 0.9em;
     border-top: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
     box-sizing: border-box;
 }
 #subMenu2 #subMenu2_lastTxt{
@@ -203,9 +229,10 @@ header {
     margin: 10px 0 10px 0;
 }
 #subMenu2 #subMenu2_firstBox .subMenu2_menu{
-    width: 50%;
-    height: 100%;
+    width: 48%;
+    height: 85px;
     float: left;
+    /*border: 1px solid black;*/
 }
 #subMenu2 ul li{
     position: relative;
@@ -241,26 +268,25 @@ header {
     display: flex;
     justify-content: space-between;
     margin: 40px;
-    z-index: 99999!important;
 }
 .mobileGnb #mobileTop .close{
     cursor: pointer;
     scale: 1.3;
 }
-.mobileMenu li{
+.mobileGnb .mobileMenu li{
     margin: 20px 0 0 30px;
-    font-size: 1em;
+    font-size: 1.3em;
     font-weight: bolder;
 }
-.mobileMenu li a{
-    color: #60227E;
+.mobileGnb .mobileMenu li a{
+    color: black;
     text-decoration: none;
-    font-size: 1.3em;
+    /*font-size: 1.3em;*/
 }
-.mobileMenu #subM1 li a{
+.mobileGnb .mobileMenu #subM1 li a{
     color: black;
 }
-.mobileMenu #subM2 li a{
+.mobileGnb .mobileMenu #subM2 li a{
     color: #5B6168;
 }
 .mobileMenu #subM1 li a:hover,
@@ -274,7 +300,7 @@ header {
 .lessBtn2{
     display: flex;
     position: absolute;
-    left:92%;
+    left:88%;
     cursor: pointer;
     z-index: 9;
 }
@@ -291,7 +317,7 @@ header {
     position: relative;
     left: -20px;
     list-style: none;
-    font-size: 0.8em;
+    font-size: 1em;
 }
 .mobileGnb .mobileMenu #subM2{
     width: 100%;
@@ -311,18 +337,22 @@ header {
 .mobileGnb .mobileMenu #subM2 li:nth-of-type(2),
 .mobileGnb .mobileMenu #subM2 li:nth-of-type(3),
 .mobileGnb .mobileMenu #subM2 li:nth-of-type(4){
-    font-size: 0.7em;
+    font-size: 1em;
 }
-/**********************title**********************/
-#title {
+/**********************titleBox**********************/
+#title_box{
     width: 100%;
-    /*height: 50px;*/
+    height: auto;
+    overflow: hidden;
+}
+#title_box h1 span{
     position: absolute;
-    text-align: center;
-    font-size: 2.1em;
-    /*border: 1px solid red;*/
-    margin:120px auto;
-    /*display: none;*/
+    color: white;
+    left: 50%;
+    margin-left: -60px;
+    top: 230px;
+    font-size: 48px;
+    font-weight: bolder;
 }
 /**********************section1**********************/
 #section1{
@@ -353,6 +383,7 @@ header {
     margin-top: 30px;
     font-size: 1.5em;
     letter-spacing:0;
+    font-weight: bolder;
 }
 #section1 #allContentBox .contentBox .inside_ContentBox p{
     margin-top: 10px;
@@ -362,7 +393,7 @@ header {
 #section1 #d-ContentBox{
     position: relative;
     height: 550px;
-    margin-top: -120px;
+    /*margin-top: -120px;*/
     display: none;
 }
 #section1 #d-ContentBox .contentBox{
@@ -395,6 +426,7 @@ header {
 }
 #section2 #section2_txtBox h1{
     font-size: 2.2em;
+    font-weight: bolder;
 }
 #section2 #section2_txtBox p{
     margin-top: 15px;
@@ -606,9 +638,10 @@ header {
     }
     #section1 #d-ContentBox .contentBox .inside_txtBox h3{
         margin-bottom: 5px;
+        font-weight: bolder;
     }
     #section2{
-        margin-top: 100px;
+        margin-top: 200px;
         height: 1385px;
     }
     #display_CircleBox{
@@ -656,6 +689,7 @@ header {
     #section1 #d-ContentBox .contentBox .inside_txtBox h3{
         font-size: 18px;
         margin-bottom: 3px;
+        font-weight: bolder;
     }
     #section1 #d-ContentBox .contentBox .inside_txtBox p{
         font-size: 14px;
