--- a/css/work_list.css
+++ b/css/work_list.css
@@ -15,8 +15,6 @@
     overflow: hidden;
 }
 html, body {
-    width: 100%;
-    height: 100%;
     font-family: 'Noto Sans KR', sans-serif;
 }
 #wrapper {
@@ -24,8 +22,8 @@ html, body {
     height: 100%;
 }
 header {
-    width: 80%;
-    height: 250px;
+    width: 100%;
+    height: 100px;
     box-sizing: border-box;
     overflow: hidden;
     display: flex;
@@ -39,35 +37,59 @@ header {
 .po{
     cursor: pointer;
 }
+.cs-purple{
+    color: #60227E;
+}
+/*********************************로그인*********************************/
+#loginFormBox{
+    width: 100%;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+}
+#loginFormBox #loginForm{
+    width: 100%;
+    height: 20px;
+    position: fixed;
+    z-index: 9999;
+    display: flex;
+    justify-content: right;
+    background-color: white;
+}
+#loginFormBox #loginForm span{
+    margin-right: 30px;
+    cursor: pointer;
+    font-size: 14px;
+}
 /**********************상단 네비**********************/
 #topGnb {
     width: 100%;
     height: 100px;
-    z-index: 9;
-    position: relative;
+    z-index: 999;
+    /*position: relative;*/
     display: flex;
     justify-content: space-around;
     box-sizing: border-box;
-    /*border: 1px solid red;*/
-}
-#topGnb:hover {
     background-color: white;
-    color: #1A191B;
-    transition: background-color 0.5s;
+    position: fixed;
+}
+#topGnb #nav_list{
+    width: 50%;
 }
 #topGnb #language,
 #topGnb #hamburger {
     color: black;
     cursor: pointer;
 }
-#topGnb ul {
-    width: 80%;
+#topGnb #topGnbMenu {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
     padding: 0;
 }
-#topGnb ul li {
+#topGnb #topGnbMenu li {
     width: 15%;
     float: left;
     list-style: none;
@@ -75,10 +97,8 @@ header {
     height: 100px;
     line-height: 100px;
     position: relative;
-    left: -40px;
-    /*margin-right: -30px;*/
 }
-#topGnb ul li a::after {
+#topGnb #topGnbMenu li a::after {
     content: "";
     width: 0;
     position: absolute;
@@ -86,18 +106,18 @@ header {
     right: 0;
     bottom: 0;
     height: 3px;
-    transition: width 0.3s;
+    transition: width 0.5s;
     margin: 0 auto;
 }
-#topGnb ul li:hover a::after {
-    width: 50%;
+#topGnb #topGnbMenu li:hover a::after {
+    width: 80%;
     background-color: purple;
 }
-#topGnb ul li:hover a {
+#topGnb #topGnbMenu li:hover a {
     color: purple;
     transition: color 0.5s;
 }
-#topGnb ul li a {
+#topGnb #topGnbMenu li a {
     text-decoration: none;
     color: black;
     font-weight: bolder;
@@ -113,17 +133,6 @@ header {
 #topGnb img {
     margin-top: 40px;
     cursor: pointer;
-}
-.gnbActive{
-    content: "";
-    width: 50%;
-    background-color: purple;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 3px;
-    margin: 0 auto;
 }
 /**********************상단 네비 서브메뉴**********************/
 #subMenu {
@@ -294,7 +303,7 @@ header {
 .lessBtn2{
     display: flex;
     position: absolute;
-    left:92%;
+    left:88%;
     cursor: pointer;
     z-index: 9;
 }
@@ -333,16 +342,20 @@ header {
 .mobileGnb .mobileMenu #subM2 li:nth-of-type(4){
     font-size: 1em;
 }
-/**********************title**********************/
-#title {
+/**********************titleBox**********************/
+#title_box{
     width: 100%;
-    /*height: 50px;*/
+    height: auto;
+    overflow: hidden;
+}
+#title_box h1 span{
     position: absolute;
-    text-align: center;
-    font-size: 2.1em;
-    /*border: 1px solid red;*/
-    margin:120px auto;
-    /*display: none;*/
+    color: white;
+    left: 50%;
+    margin-left: -100px;
+    top: 230px;
+    font-size: 48px;
+    font-weight: bolder;
 }
 /**********************section1 네비**********************/
 #section1_nav{
